--- a/.babelrc
+++ b/.babelrc
@@ -5,5 +5,8 @@
       { "targets": { "node": "6.10", "esmodules": true } }
     ]
   ],
-  "plugins": ["@babel/plugin-proposal-object-rest-spread"]
+  "plugins": [
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-transform-regenerator"
+  ]
 }
