--- a/package.json
+++ b/package.json
@@ -21,15 +21,21 @@
   "devDependencies": {
     "@babel/core": "^7.1.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-regenerator": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "babel": "^6.23.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "d3": "^5.7.0",
     "d3-hierarchy": "^1.1.8",
     "d3-scale": "^2.1.2",
+    "rlp": "^2.1.0",
     "web3": "^1.0.0-beta.36",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
-  }
+  },
+  "dependencies": {}
 }
